Eliminate now-unnecessary module exports (gln plugin imports removed)